2007-03-13 Borut Razem <borut.razem AT siol.net>

	* src/Makefile.in, sim/ucsim/avr.src/Makefile.in, 
	  sim/ucsim/hc08.src/Makefile.in, sim/ucsim/s51.src/Makefile.in,
	  sim/ucsim/xa.src/Makefile.in, sim/ucsim/z80.src/Makefile.in:
	  introduced LDFLAGS

2007-03-11 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/printfl.c: 13 bytes less __data mem (12 more __idata)
	* device/lib/printf_large.c: pointer was converted to generic
	pointer for mcs51 models other than model-small (Maarten noticed)

2007-03-10 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/ADuC84x.h: Added.

2007-03-10 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.lex, src/SDCCutil.[ch], src/SDCCval:
	  fixed RFE #1624219: double backslashes in filenames;
	  functions hexEscape(), octalEscape() and copyStr() moved from
	  SDCCval.c to SDCCutil.c and made them glovbally available

2007-03-09 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.lex, src/SDCCast.c. src/SDCCglobl.c, src/SDCCsymt.c,
	  src/SDCCval.c: fixed bugs #1676768: Wrong line number reported and
	  1673361: Missaligned comments in output files

2007-03-09 Raphael Neider <rneider AT web.de>

	* device/include/pic/pic14devices.txt: fixed confsiz of 16f91[3467]

2007-03-09 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c,
	* src/pic/glue.c,
	* src/pic/ralloc.c: suppress undesired debug output
	* src/SDCCmain.c (linkEdit): initialize c to quieten compiler

2007-03-08 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/printf_large.c: 6 bytes less __data mem (6 more __idata)

2007-03-07 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic16/libdev/pic18f[24][34]31.c:
	  search include files in the current directory

2007-03-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c (emitMaps, glue),
	* src/SDCCmem.c (initMem, allocDefault): added x_abs for initialized
	  absolute xdata
	* support/regression/tests/absolute.c: added xdata test
